2005-09-01  Raja R Harinath  <rharinath@novell.com>

	* NameValueCollection.cs (Add): Add a key from the other
	collection even if its associated value list is empty.
	Fix regression introduced by last change.

2005-08-30  Jackson Harper  <jackson@ximian.com>

	* NameValueCollection.cs: Don't crash when we have empty
	collections.

2005-08-19  Jb Evain  <jbevain@gmail.com>

	* NameObjectCollectionBase (GetEnumerator):
		Use the virtual modifier only in 2.0 profile.

2005-08-03  Raja R Harinath  <rharinath@novell.com>

	* ListDictionary.cs: Rewrite to reduce key comparison overhead.
	Unify all list traversals into FindEntry.
	(AreEqual): Remove.
	(FindEntry): Split into two duplicate loops, one when comparer ==
	null, the other when it isn't.  Add new out parameter that points
	to the entry preceding the result.
	(Add, AddImpl, this []): Update.
	(Remove): Use FindEntry for traversal.
	(CopyTo): Add more tests.
	(ListEntryEnumerator): Simplify.
	(ListEntryCollection, ListEntryCollectionEnumerator): Likewise.

	* HybridDictionary.cs: Rewrite to avoid a test on each operation.
	(list, hashtable): Remove.
	(inner): New IDictionary field that can hold either a list
	dictionary or a hashtable.
	(is_list): New.  Notes whether 'inner' holds a list dictionary or not.
	(Clear): Don't change a hashtable to a list dictionary.

2005-07-25  Lluis Sanchez Gual <lluis@novell.com>

	* NameObjectCollectionBase.cs: Don't throw an exception in
	OnDeserialization if infoCopy has not been set, which means that
	the serialization constructor has not been called, because
	a subclass may completely override that constructor.
	This fixes bug #75607.

2005-05-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ProcessStringDictionary.cs: PlatformID for 2.0.

2005-05-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NameObjectCollectionBase.cs: after 1.0, this uses DefaultInvariant for
	the hash code provider and comparer, as Ben said.

2005-05-05  Lluis Sanchez Gual <lluis@novell.com>
